# data-pipeline-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: pipeline.yaml
scripts/: run_pipeline.py
src/data_pipeline.egg-info/: PKG-INFO  SOURCES.txt
src/data_pipeline/core/: data_sink.py  data_source.py  filter.py  filter_factory.py  logger.py  pipeline.py
src/data_pipeline/filters/: business_validation.py  clean_data.py  data_quality_metrics.py  data_type_converter.py  deduplicate.py  filter_by_date.py  load_csv.py  load_csv_chunks.py  save_csv.py  schema_validation.py  validation.py
src/data_pipeline/sinks/: __init__.py  save_csv.py
src/data_pipeline/sources/: __init__.py  load_csv.py
src/data_pipeline/utils/: config_loader.py
src/data_pipeline/validation/: result.py  validation_report.py
src/data_pipeline/validation/engine/: engine.py
src/data_pipeline/validation/rules/: base.py  rule_factory.py
src/data_pipeline/validation/rules/business/: numeric_range_rule.py
tests/: conftest.py  test_clean_data.py  test_filter_by_date.py
tests/filters/: test_clean_data_filter.py  test_data_quality_metrics_filter.py  test_data_type_converter_filter.py  test_deduplicate_filter.py  test_filter_by_date_filter.py  test_save_csv_filter.py  test_validation_filter.py
tests/sinks/: test_save_csv_sink.py
tests/validation/: test_rule_engine.py  test_validation_report.py  test_validation_result.py
tests/validation/rules/: test_allowed_values_rule.py  test_column_types_rule.py  test_required_columns_rule.py  test_value_range_rule.py
(+4 files in other folders)
